[package]
name = "CPU_SCHEDULER_ENGINE"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8"
crossterm = "0.27"
tabled = "0.14"